--- a/DinnerParty/app/views/users/show.html.erb
+++ b/DinnerParty/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<!-- this page needs partials -->
+<!-- this page needs partials - they are not just for repetition, but for making a page feel like an outline -->
 
 <% view_object = UserViewObject.new(@user_show) %>
 <div class="pad-20-left">
